cmake_minimum_required(VERSION 3.14)
project(AlgorithmLearn)

set(CMAKE_CXX_STANDARD 14)

ADD_SUBDIRECTORY(Day01_boost_filesystem)

ADD_SUBDIRECTORY(day02)
ADD_SUBDIRECTORY(Day03)


ADD_SUBDIRECTORY(PThreadMutexDemo1)

ADD_SUBDIRECTORY(algorithm01)
ADD_SUBDIRECTORY(数据结构/快速排序qsort)

ADD_SUBDIRECTORY(STL01)


#引入子目录
ADD_SUBDIRECTORY(数据结构/Tree)

ADD_SUBDIRECTORY(c++多态)
ADD_SUBDIRECTORY(c++引用)
ADD_SUBDIRECTORY(c++CONST)
ADD_SUBDIRECTORY(c++MyString)
ADD_SUBDIRECTORY(c++Operator)
ADD_SUBDIRECTORY(c++仿函数Functor)

ADD_SUBDIRECTORY(c++_STL/container)